WIP: Migrate mdsal-dom-spi to JUnit5
This is an automated conversion, needs fixing up w.r.t. mocking.

Change-Id: Icc54a2fbd84f21511ac6dd395da970c7db065c13
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>